# Backtest-Engine

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: 01_data_loader.md  02_backtest_engine.md  03_demo_findings.md
scripts/: 01_fetch_data.py  02_ma_crossover_demo.py  03_rf_integration.py  05_rsi_mean_reversion.py
src/backtester/backtest/: engine.py
src/backtester/costs/: linear.py
src/backtester/features/: indicators.py
src/backtester/metrics/: performance.py
tests/: test_engine.py  test_indicators.py  test_loader.py  test_metrics.py  test_rates.py
